<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.kruemelopment.springball.settings"
    android:background="@color/hellblau"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/optionen"
        android:textColor="@android:color/background_light"
        android:textSize="36sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/switch1"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/hgj"
        android:checked="false"
        android:switchMinWidth="96dp"
        android:switchPadding="16dp"
        android:text="@string/sound"
        android:thumb="@null"
        android:textOff="@string/lee"
        android:textOn="@string/lee"
        android:textSize="30sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="10dp"
        android:background="@drawable/hgj"
        android:checked="false"
        android:switchMinWidth="96dp"
        android:switchPadding="16dp"
        android:text="@string/musik"
        android:thumb="@null"
        android:textOff="@string/lee"
        android:textOn="@string/lee"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:background="@color/hellblau"
        android:padding="5dp"
        android:text="@string/nutzungs"
        android:textColor="@color/weiss"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:background="@color/hellblau"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/datens"
        android:textColor="@color/weiss"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/hellblau"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/hilfe"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch2"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/ballheight"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp" />

    <SeekBar
        android:id="@+id/seekBar2"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/noprogress"
        android:max="10"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:progressDrawable="@drawable/progressdrawable"
        android:thumb="@drawable/customthumb" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/time"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/noprogress"
        android:max="60"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:progressDrawable="@drawable/progressdrawable"
        android:thumb="@drawable/customthumb" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/fallgeschwindigkeit"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp" />

    <SeekBar
        android:id="@+id/seekBar4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/noprogress"
        android:max="10"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:progressDrawable="@drawable/progressdrawable"
        android:thumb="@drawable/customthumb" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignEnd="@+id/seekBar2"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignEnd="@+id/seekBar2"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignEnd="@+id/seekBar4"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/seekBar4">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="10dp"
            android:src="@drawable/playgr" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView14"
            android:layout_alignStart="@+id/imageView14"
            android:layout_alignEnd="@+id/imageView14"
            android:gravity="center"
            android:text="@string/connected"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/imageView14">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:background="@color/hellblau"
                android:padding="5dp"
                android:text="@string/ach"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView21"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:background="@color/hellblau"
                android:padding="5dp"
                android:text="@string/lead"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
